@@ -1857,7 +1857,7 @@ public class MySQLDatabase implements DatabaseFacade {
                     else {
                         // Not 7 Bit use the unicode system
                         sb.append("&#");
-                        sb.append(new Integer(ci).toString());
+                        sb.append(Integer.valueOf(ci).toString());
                         sb.append(';');
                         }
                     }
